# TGBot

./: .gitignore  main.py  message.json  pyproject.toml  settings.py
log/: users.yaml
src/utils/: utils.py
